updated Jenkins file with build stage-1